gruppeopgave/SRC/Parser.output
   0  $accept : %entry% $end

   1  Program : Prog TEOF

   2  Prog : TProgram TId TSemi FunDecs

   3  FunDecs : FunDecs FunDec
   4          | FunDec

   5  FunDec : TFunction TId TLParen PDecl TRParen TColon Type Block TSemi
   6         | TProcedure TId TLParen PDecl TRParen Block TSemi

   7  Block : SBlock
   8        | TVar Decs SBlock

   9  SBlock : TBegin StmtSeq TSemi TEnd
  10         | Stmt

  11  StmtSeq : StmtSeq TSemi Stmt
  12          | Stmt

  13  Stmt : TId TLParen CallParams TRParen
  14       | TIf Exp TThen Block TElse Block
  15       | TIf Exp TThen Block
  16       | TWhile Exp TDo Block
  17       | TReturn Ret
  18       | LVal TAssign Exp

  19  LVal : TId
  20       | TId TLBracket Exps TRBracket

  21  Ret : Exp
  22      |

  23  Exp : TNLit
  24      | TBLit
  25      | TCLit
  26      | TSLit
  27      | TLCurly Exps TRCurly
  28      | LVal
  29      | TNot Exp
  30      | Exp TPlus Exp
  31      | Exp TMinus Exp
  32      | Exp TTimes Exp
  33      | Exp TSlash Exp
  34      | Exp TEq Exp
  35      | Exp TLess Exp
  36      | Exp TAnd Exp
  37      | Exp TOr Exp
  38      | TLParen Exp TRParen
  39      | TId TLParen CallParams TRParen

  40  PDecl : Params
  41        |

  42  Params : Params TSemi Dec
  43         | Dec

  44  Dec : TId TColon Type

  45  Decs : Decs Dec TSemi
  46       | Dec TSemi

  47  Type : TInt
  48       | TChar
  49       | TBool
  50       | TArray TOf Type

  51  CallParams : Exps
  52             |

  53  Exps : Exp TComma Exps
  54       | Exp

  55  %entry% : '\001' Program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Program  (55)

	TProgram  shift 3
	.  error

	Program  goto 4
	Prog  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Prog : TProgram . TId TSemi FunDecs  (2)

	TId  shift 6
	.  error


state 4
	%entry% : '\001' Program .  (55)

	.  reduce 55


state 5
	Program : Prog . TEOF  (1)

	TEOF  shift 7
	.  error


state 6
	Prog : TProgram TId . TSemi FunDecs  (2)

	TSemi  shift 8
	.  error


state 7
	Program : Prog TEOF .  (1)

	.  reduce 1


state 8
	Prog : TProgram TId TSemi . FunDecs  (2)

	TFunction  shift 9
	TProcedure  shift 10
	.  error

	FunDecs  goto 11
	FunDec  goto 12


state 9
	FunDec : TFunction . TId TLParen PDecl TRParen TColon Type Block TSemi  (5)

	TId  shift 13
	.  error


state 10
	FunDec : TProcedure . TId TLParen PDecl TRParen Block TSemi  (6)

	TId  shift 14
	.  error


state 11
	Prog : TProgram TId TSemi FunDecs .  (2)
	FunDecs : FunDecs . FunDec  (3)

	TFunction  shift 9
	TProcedure  shift 10
	TEOF  reduce 2

	FunDec  goto 15


state 12
	FunDecs : FunDec .  (4)

	.  reduce 4


state 13
	FunDec : TFunction TId . TLParen PDecl TRParen TColon Type Block TSemi  (5)

	TLParen  shift 16
	.  error


state 14
	FunDec : TProcedure TId . TLParen PDecl TRParen Block TSemi  (6)

	TLParen  shift 17
	.  error


state 15
	FunDecs : FunDecs FunDec .  (3)

	.  reduce 3


state 16
	FunDec : TFunction TId TLParen . PDecl TRParen TColon Type Block TSemi  (5)
	PDecl : .  (41)

	TId  shift 18
	TRParen  reduce 41

	PDecl  goto 19
	Params  goto 20
	Dec  goto 21


state 17
	FunDec : TProcedure TId TLParen . PDecl TRParen Block TSemi  (6)
	PDecl : .  (41)

	TId  shift 18
	TRParen  reduce 41

	PDecl  goto 22
	Params  goto 20
	Dec  goto 21


state 18
	Dec : TId . TColon Type  (44)

	TColon  shift 23
	.  error


state 19
	FunDec : TFunction TId TLParen PDecl . TRParen TColon Type Block TSemi  (5)

	TRParen  shift 24
	.  error


state 20
	PDecl : Params .  (40)
	Params : Params . TSemi Dec  (42)

	TSemi  shift 25
	TRParen  reduce 40


state 21
	Params : Dec .  (43)

	.  reduce 43


state 22
	FunDec : TProcedure TId TLParen PDecl . TRParen Block TSemi  (6)

	TRParen  shift 26
	.  error


state 23
	Dec : TId TColon . Type  (44)

	TArray  shift 27
	TBool  shift 28
	TChar  shift 29
	TInt  shift 30
	.  error

	Type  goto 31


state 24
	FunDec : TFunction TId TLParen PDecl TRParen . TColon Type Block TSemi  (5)

	TColon  shift 32
	.  error


state 25
	Params : Params TSemi . Dec  (42)

	TId  shift 18
	.  error

	Dec  goto 33


state 26
	FunDec : TProcedure TId TLParen PDecl TRParen . Block TSemi  (6)

	TBegin  shift 34
	TId  shift 35
	TIf  shift 36
	TReturn  shift 37
	TVar  shift 38
	TWhile  shift 39
	.  error

	Block  goto 40
	SBlock  goto 41
	Stmt  goto 42
	LVal  goto 43


state 27
	Type : TArray . TOf Type  (50)

	TOf  shift 44
	.  error


state 28
	Type : TBool .  (49)

	.  reduce 49


state 29
	Type : TChar .  (48)

	.  reduce 48


state 30
	Type : TInt .  (47)

	.  reduce 47


state 31
	Dec : TId TColon Type .  (44)

	.  reduce 44


state 32
	FunDec : TFunction TId TLParen PDecl TRParen TColon . Type Block TSemi  (5)

	TArray  shift 27
	TBool  shift 28
	TChar  shift 29
	TInt  shift 30
	.  error

	Type  goto 45


state 33
	Params : Params TSemi Dec .  (42)

	.  reduce 42


state 34
	SBlock : TBegin . StmtSeq TSemi TEnd  (9)

	TId  shift 35
	TIf  shift 36
	TReturn  shift 37
	TWhile  shift 39
	.  error

	StmtSeq  goto 46
	Stmt  goto 47
	LVal  goto 43


state 35
	Stmt : TId . TLParen CallParams TRParen  (13)
	LVal : TId .  (19)
	LVal : TId . TLBracket Exps TRBracket  (20)

	TLBracket  shift 48
	TLParen  shift 49
	TAssign  reduce 19


state 36
	Stmt : TIf . Exp TThen Block TElse Block  (14)
	Stmt : TIf . Exp TThen Block  (15)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error

	LVal  goto 58
	Exp  goto 59


state 37
	Stmt : TReturn . Ret  (17)
	Ret : .  (22)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	TElse  reduce 22
	TSemi  reduce 22

	LVal  goto 58
	Ret  goto 60
	Exp  goto 61


state 38
	Block : TVar . Decs SBlock  (8)

	TId  shift 18
	.  error

	Dec  goto 62
	Decs  goto 63


state 39
	Stmt : TWhile . Exp TDo Block  (16)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error

	LVal  goto 58
	Exp  goto 64


state 40
	FunDec : TProcedure TId TLParen PDecl TRParen Block . TSemi  (6)

	TSemi  shift 65
	.  error


state 41
	Block : SBlock .  (7)

	.  reduce 7


state 42
	SBlock : Stmt .  (10)

<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
	.  reduce 10
=======
	.  reduce 10
=======
	.  reduce 10
>>>>>>> External Changes
=======
	.  reduce 10
>>>>>>> External Changes
=======
	.  reduce 10
>>>>>>> External Changes
=======
	.  reduce 10
>>>>>>> External Changes

<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
>>>>>>> External Changes
=======
>>>>>>> External Changes
=======
>>>>>>> External Changes
=======
>>>>>>> External Changes
=======
>>>>>>> External Changes

state 43
	Stmt : LVal . TAssign Exp  (18)

<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
state 43
	Stmt : LVal . TAssign Exp  (18)

	TAssign  shift 66
	.  error
=======
	TAssign  shift 66
	.  error
>>>>>>> External Changes
=======
	TAssign  shift 66
	.  error
>>>>>>> External Changes
=======
	TAssign  shift 66
	.  error
>>>>>>> External Changes
=======
	TAssign  shift 66
	.  error
>>>>>>> External Changes
=======
	TAssign  shift 66
	.  error
>>>>>>> External Changes


state 44
	Type : TArray TOf . Type  (50)

	TArray  shift 27
	TBool  shift 28
	TChar  shift 29
	TInt  shift 30
	.  error

	Type  goto 67


state 45
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
	FunDec : TFunction TId TLParen PDecl TRParen TColon Type . Block TSemi  (5)
=======
	FunDec : TFunction TId TLParen PDecl TRParen TColon Type . Block TSemi  (5)
=======
	FunDec : TFunction TId TLParen PDecl TRParen TColon Type . Block TSemi  (5)
=======
	FunDec : TFunction TId TLParen PDecl TRParen TColon Type . Block TSemi  (5)

	TBegin  shift 34
	TId  shift 35
	TIf  shift 36
	TReturn  shift 37
	TVar  shift 38
	TWhile  shift 39
	.  error
>>>>>>> External Changes

<<<<<<< Local Changes
	TBegin  shift 34
	TId  shift 35
	TIf  shift 36
	TReturn  shift 37
	TVar  shift 38
	TWhile  shift 39
	.  error
>>>>>>> External Changes

<<<<<<< Local Changes
	TBegin  shift 34
	TId  shift 35
	TIf  shift 36
	TReturn  shift 37
	TVar  shift 38
	TWhile  shift 39
	.  error
>>>>>>> External Changes

<<<<<<< Local Changes
	TBegin  shift 34
	TId  shift 35
	TIf  shift 36
	TReturn  shift 37
	TVar  shift 38
	TWhile  shift 39
	.  error

	Block  goto 68
	SBlock  goto 41
	Stmt  goto 42
	LVal  goto 43
=======
	Block  goto 68
	SBlock  goto 41
	Stmt  goto 42
	LVal  goto 43
>>>>>>> External Changes
=======
	Block  goto 68
	SBlock  goto 41
	Stmt  goto 42
	LVal  goto 43
>>>>>>> External Changes
=======
	Block  goto 68
	SBlock  goto 41
	Stmt  goto 42
	LVal  goto 43
>>>>>>> External Changes


state 46
	SBlock : TBegin StmtSeq . TSemi TEnd  (9)
	StmtSeq : StmtSeq . TSemi Stmt  (11)

	TSemi  shift 69
	.  error


state 47
	StmtSeq : Stmt .  (12)

	.  reduce 12


state 48
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
	LVal : TId TLBracket . Exps TRBracket  (20)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error
=======
	LVal : TId TLBracket . Exps TRBracket  (20)
>>>>>>> External Changes
=======
	LVal : TId TLBracket . Exps TRBracket  (20)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error
>>>>>>> External Changes

<<<<<<< Local Changes
<<<<<<< Local Changes
	LVal  goto 58
	Exp  goto 70
	Exps  goto 71
=======
	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error
=======
	LVal : TId TLBracket . Exps TRBracket  (20)
>>>>>>> External Changes
=======
	LVal : TId TLBracket . Exps TRBracket  (20)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error
>>>>>>> External Changes

<<<<<<< Local Changes
<<<<<<< Local Changes
	LVal  goto 58
	Exp  goto 70
	Exps  goto 71
>>>>>>> External Changes
=======
	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error
=======
	LVal : TId TLBracket . Exps TRBracket  (20)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error
>>>>>>> External Changes

<<<<<<< Local Changes
	LVal  goto 58
	Exp  goto 70
	Exps  goto 71
>>>>>>> External Changes
=======
	LVal  goto 58
	Exp  goto 70
	Exps  goto 71
>>>>>>> External Changes
=======
	LVal  goto 58
	Exp  goto 70
	Exps  goto 71
>>>>>>> External Changes
=======
	LVal  goto 58
	Exp  goto 70
	Exps  goto 71
>>>>>>> External Changes


state 49
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
	Stmt : TId TLParen . CallParams TRParen  (13)
	CallParams : .  (52)
=======
	Stmt : TId TLParen . CallParams TRParen  (13)
	CallParams : .  (52)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	TRParen  reduce 52
>>>>>>> External Changes

<<<<<<< Local Changes
	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	TRParen  reduce 52
=======
	Stmt : TId TLParen . CallParams TRParen  (13)
	CallParams : .  (52)
>>>>>>> External Changes
=======
	Stmt : TId TLParen . CallParams TRParen  (13)
	CallParams : .  (52)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	TRParen  reduce 52
>>>>>>> External Changes

<<<<<<< Local Changes
<<<<<<< Local Changes
	LVal  goto 58
	Exp  goto 70
	CallParams  goto 72
	Exps  goto 73
=======
	LVal  goto 58
	Exp  goto 70
	CallParams  goto 72
	Exps  goto 73
>>>>>>> External Changes
=======
	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	TRParen  reduce 52
=======
	Stmt : TId TLParen . CallParams TRParen  (13)
	CallParams : .  (52)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	TRParen  reduce 52
>>>>>>> External Changes
=======
	Stmt : TId TLParen . CallParams TRParen  (13)
	CallParams : .  (52)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	TRParen  reduce 52
>>>>>>> External Changes

<<<<<<< Local Changes
<<<<<<< Local Changes
	LVal  goto 58
	Exp  goto 70
	CallParams  goto 72
	Exps  goto 73
>>>>>>> External Changes
=======
	LVal  goto 58
	Exp  goto 70
	CallParams  goto 72
	Exps  goto 73
>>>>>>> External Changes
=======
	LVal  goto 58
	Exp  goto 70
	CallParams  goto 72
	Exps  goto 73
>>>>>>> External Changes
=======
	LVal  goto 58
	Exp  goto 70
	CallParams  goto 72
	Exps  goto 73
>>>>>>> External Changes


state 50
	Exp : TBLit .  (24)

	.  reduce 24


state 51
	Exp : TCLit .  (25)

	.  reduce 25


state 52
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
	Decs : Dec TSemi .  (48)

	.  reduce 48
=======
	LVal : TId .  (19)
	LVal : TId . TLBracket Exps TRBracket  (20)
	Exp : TId . TLParen CallParams TRParen  (39)

	TLBracket  shift 48
	TLParen  shift 74
	TAnd  reduce 19
	TComma  reduce 19
	TDo  reduce 19
	TElse  reduce 19
	TEq  reduce 19
	TLess  reduce 19
	TMinus  reduce 19
	TOr  reduce 19
	TPlus  reduce 19
	TRBracket  reduce 19
	TRCurly  reduce 19
	TRParen  reduce 19
	TSemi  reduce 19
	TSlash  reduce 19
	TThen  reduce 19
	TTimes  reduce 19
>>>>>>> External Changes
=======
	LVal : TId .  (19)
	LVal : TId . TLBracket Exps TRBracket  (20)
	Exp : TId . TLParen CallParams TRParen  (39)

	TLBracket  shift 48
	TLParen  shift 74
	TAnd  reduce 19
	TComma  reduce 19
	TDo  reduce 19
	TElse  reduce 19
	TEq  reduce 19
	TLess  reduce 19
	TMinus  reduce 19
	TOr  reduce 19
	TPlus  reduce 19
	TRBracket  reduce 19
	TRCurly  reduce 19
	TRParen  reduce 19
	TSemi  reduce 19
	TSlash  reduce 19
	TThen  reduce 19
	TTimes  reduce 19
>>>>>>> External Changes
=======
	LVal : TId .  (19)
	LVal : TId . TLBracket Exps TRBracket  (20)
	Exp : TId . TLParen CallParams TRParen  (39)

	TLBracket  shift 48
	TLParen  shift 74
	TAnd  reduce 19
	TComma  reduce 19
	TDo  reduce 19
	TElse  reduce 19
	TEq  reduce 19
	TLess  reduce 19
	TMinus  reduce 19
	TOr  reduce 19
	TPlus  reduce 19
	TRBracket  reduce 19
	TRCurly  reduce 19
	TRParen  reduce 19
	TSemi  reduce 19
	TSlash  reduce 19
	TThen  reduce 19
	TTimes  reduce 19
>>>>>>> External Changes
=======
	LVal : TId .  (19)
	LVal : TId . TLBracket Exps TRBracket  (20)
	Exp : TId . TLParen CallParams TRParen  (39)

	TLBracket  shift 48
	TLParen  shift 74
	TAnd  reduce 19
	TComma  reduce 19
	TDo  reduce 19
	TElse  reduce 19
	TEq  reduce 19
	TLess  reduce 19
	TMinus  reduce 19
	TOr  reduce 19
	TPlus  reduce 19
	TRBracket  reduce 19
	TRCurly  reduce 19
	TRParen  reduce 19
	TSemi  reduce 19
	TSlash  reduce 19
	TThen  reduce 19
	TTimes  reduce 19
>>>>>>> External Changes
=======
	LVal : TId .  (19)
	LVal : TId . TLBracket Exps TRBracket  (20)
	Exp : TId . TLParen CallParams TRParen  (39)

	TLBracket  shift 48
	TLParen  shift 74
	TAnd  reduce 19
	TComma  reduce 19
	TDo  reduce 19
	TElse  reduce 19
	TEq  reduce 19
	TLess  reduce 19
	TMinus  reduce 19
	TOr  reduce 19
	TPlus  reduce 19
	TRBracket  reduce 19
	TRCurly  reduce 19
	TRParen  reduce 19
	TSemi  reduce 19
	TSlash  reduce 19
	TThen  reduce 19
	TTimes  reduce 19
>>>>>>> External Changes


state 53
	Exp : TLCurly . Exps TRCurly  (27)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error

	LVal  goto 58
	Exp  goto 70
	Exps  goto 75


state 54
	Exp : TLParen . Exp TRParen  (38)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error

	LVal  goto 58
	Exp  goto 76


state 55
	Exp : TNLit .  (23)

	.  reduce 23


state 56
	Exp : TNot . Exp  (29)

	TBLit  shift 50
	TCLit  shift 51
	TId  shift 52
	TLCurly  shift 53
	TLParen  shift 54
	TNLit  shift 55
	TNot  shift 56
	TSLit  shift 57
	.  error

	LVal  goto 58
	Exp  goto 77


state 57
	Exp : TSLit .  (26)

	.  reduce 26


state 58
	Exp : LVal .  (28)

	.  reduce 28


state 59
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
	Stmt : TIf Exp . TThen Block TElse Block  (14)
	Stmt : TIf Exp . TThen Block  (15)
	Exp : Exp . TPlus Exp  (30)
	Exp : Exp . TMinus Exp  (31)
	Exp : Exp . TTimes Exp  (32)
	Exp : Exp . TSlash Exp  (33)
	Exp : Exp . TEq Exp  (34)
	Exp : Exp . TLess Exp  (35)
	Exp : Exp . TAnd Exp  (36)
	Exp : Exp . TOr Exp  (37)

	TAnd  shift 78
	TEq  shift 79
	TLess  shift 80
	TMinus  shift 81
	TOr  shift 82
	TPlus  shift 83
	TSlash  shift 84
	TThen  shift 85
	TTimes  shift 86
	.  error

=======
	Stmt : TIf Exp . TThen Block TElse Block  (14)
	Stmt : TIf Exp . TThen Block  (15)
	Exp : Exp . TPlus Exp  (30)
	Exp : Exp . TMinus Exp  (31)
	Exp : Exp . TTimes Exp  (32)
	Exp : Exp . TSlash Exp  (33)
	Exp : Exp . TEq Exp  (34)
	Exp : Exp . TLess Exp  (35)
	Exp : Exp . TAnd Exp  (36)
	Exp : Exp . TOr Exp  (37)

	TAnd  shift 78
	TEq  shift 79
	TLess  shift 80
	TMinus  shift 81
	TOr  shift 82
	TPlus  shift 83
	TSlash  shift 84
	TThen  shift 85
	TTimes  shift 86
	.  error
>>>>>>> External Changes
=======
	Stmt : TIf Exp . TThen Block TElse Block  (14)
	Stmt : TIf Exp . TThen Block  (15)
	Exp : Exp . TPlus Exp  (30)
	Exp : Exp . TMinus Exp  (31)
	Exp : Exp . TTimes Exp  (32)
	Exp : Exp . TSlash Exp  (33)
	Exp : Exp . TEq Exp  (34)
	Exp : Exp . TLess Exp  (35)
	Exp : Exp . TAnd Exp  (36)
	Exp : Exp . TOr Exp  (37)

	TAnd  shift 78
	TEq  shift 79
	TLess  shift 80
	TMinus  shift 81
	TOr  shift 82
	TPlus  shift 83
	TSlash  shift 84
	TThen  shift 85
	TTimes  shift 86
	.  error
>>>>>>> External Changes
=======
	Stmt : TIf Exp . TThen Block TElse Block  (14)
	Stmt : TIf Exp . TThen Block  (15)
	Exp : Exp . TPlus Exp  (30)
	Exp : Exp . TMinus Exp  (31)
	Exp : Exp . TTimes Exp  (32)
	Exp : Exp . TSlash Exp  (33)
	Exp : Exp . TEq Exp  (34)
	Exp : Exp . TLess Exp  (35)
	Exp : Exp . TAnd Exp  (36)
	Exp : Exp . TOr Exp  (37)

	TAnd  shift 78
	TEq  shift 79
	TLess  shift 80
	TMinus  shift 81
	TOr  shift 82
	TPlus  shift 83
	TSlash  shift 84
	TThen  shift 85
	TTimes  shift 86
	.  error
>>>>>>> External Changes
=======
	Stmt : TIf Exp . TThen Block TElse Block  (14)
	Stmt : TIf Exp . TThen Block  (15)
	Exp : Exp . TPlus Exp  (30)
	Exp : Exp . TMinus Exp  (31)
	Exp : Exp . TTimes Exp  (32)
	Exp : Exp . TSlash Exp  (33)
	Exp : Exp . TEq Exp  (34)
	Exp : Exp . TLess Exp  (35)
	Exp : Exp . TAnd Exp  (36)
	Exp : Exp . TOr Exp  (37)

	TAnd  shift 78
	TEq  shift 79
	TLess  shift 80
	TMinus  shift 81
	TOr  shift 82
	TPlus  shift 83
	TSlash  shift 84
	TThen  shift 85
	TTimes  shift 86
	.  error
>>>>>>> External Changes

<<<<<<< Local Changes
<<<<<<< Local Changes
<<<<<<< Local Changes
state 60
	Stmt : TReturn Ret .  (17)
=======
>>>>>>> External Changes
=======
>>>>>>> External Changes
